[package]
name = "riscv"
version = "0.5.5"
repository = "https://github.com/betrusted-io/riscv"
authors = ["Sean Cross <sean@xobs.io>", "The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to RISC-V processors for xoulon"
keywords = ["riscv", "register", "peripheral"]
license = "ISC"

[dependencies]
bare-metal = ">=0.2.0,<0.2.5"
bit_field = "0.9.0"

[features]
inline-asm = []